HelloUltraviolet/Fixtures/RejectedSource/Parallelism/GpuSafeGenericUnbounded/Expected.uv
//! Expected diagnostic metadata for the GpuSafeGenericUnbounded rejected-source specimen.

expectedDiagnostic("E-TYP-2642", "rule.20.GpuSafe-Generic-Unbounded-Err")
